--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ mergedManifestDescriptor.json
 APIExternalProducer.js
 .*/APIExternalProducer.js
 /mta_archives/
+/mta_archives/exer07_db-module_0.0.1.mtar
